--- a/templates/base.html
+++ b/templates/base.html
@@ -13,32 +13,50 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+    <div class="container mt-3">
+        {% if messages %}
+            {% for message in messages %}
+                <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            {% endfor %}
+        {% endif %}
+    </div>
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">CineMax</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <a class="navbar-brand" href="{% url 'home' %}">CineMax</a>
+            <div class="collapse navbar-collapse" id="navbarNav">Add commentMore actions
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
+                        <a class="nav-link active" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="movies.html">Movies</a>
+                        <a class="nav-link" href="{% url 'movies' %}">Movies</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="{% url 'about' %}">About</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
+                    
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search movies...">
+             <form class="d-flex me-3" method="GET" action="{% url 'movies' %}">
+                    <input class="form-control me-2" name="search" type="search" placeholder="Search movies...">
                     <button class="btn btn-outline-light" type="submit">Search</button>
-                </form>
+            </form>
+    
+                <div class="d-flex align-items-center">
+                    <a href="{% url 'register' %}" class="btn btn-primary">Register</a>
+                    {% if not request.user.is_authenticated %}
+                    <a href="{% url 'login' %}" class="btn btn-outline-light me-2">Login</a>                 
+                    {% else %}
+                    <div class="col-md ms-3">
+                    <p class='text-white mb-0'>Welcome<a href="{% url 'login' %}"> {{ request.user.username }}</a></p>
+                    </div>
+                    {% endif %}
             </div>
         </div>
     </nav>
