unnecessary comments removed

--- a/templates/about.html
+++ b/templates/about.html
@@ -37,7 +37,7 @@
                         <div class="card h-100">
                             <img src="https://via.placeholder.com/300x300" class="card-img-top" alt="Team Member">
                             <div class="card-body">
-                                <h5 class="card-title">John Doe</h5>
+                                <h5 class="card-title"></h5>
                                 <h6 class="card-subtitle mb-2 text-muted">Founder & CEO</h6>
                                 <p class="card-text">Film critic with over 20 years of experience in the industry.</p>
                             </div>
