--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}Add commentMore actions
+{% extends 'base.html' %}
 {% block content %}
 <section class="py-5">
     <div class="container">
